Pop in stopgap Log Out link for mobile nav.

--- a/assets/css/components/_navbar.scss
+++ b/assets/css/components/_navbar.scss
@@ -8,3 +8,15 @@
 // Associated Variables
 
 $navbar-background-color: $primary;
+
+// Adaptations
+
+.navbar-brand {
+  justify-content: space-between;
+
+  a:last-child { // FIXME: This is a stopgap until we get a more robust nav in place.
+    @media (min-width: 1024px) {
+      display: none;
+    }
+  }
+}
